Agregue primer titulo

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </Header>
     <hr>
     <main>
+        <h1>Primer titulo</h1>
        <img id="Fondomain" src="/Proyecto de santiago/Imagenes/Fondo.jpg" alt="Fondo">
     </main>
     
