Agregue boton de inicio

--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/Proyecto de santiago/Paginas del color de prendas/Styles.css">
+    <link rel="stylesheet" type="text/css" href="/Paginas del color de prendas/Styles.css">
     <title>Sourstuck</title>
 </head>
 <body>
@@ -43,7 +43,7 @@
        <img id="Fondomain" src="/Proyecto de santiago/Imagenes/Fondo.jpg" alt="Fondo">
     </main>
     
-    <script src="/Proyecto de santiago/Paginas del color de prendas/script.js"></script>
+    <script src="/Paginas del color de prendas/script.js"></script>
 </body>
 
 </html>
