--- a/Paginas del color de prendas/Quienesomos.html
+++ b/Paginas del color de prendas/Quienesomos.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="desplegable">
-        <a href="/Proyecto de santiago/Paginaprincipal.html"
+        <a href="/Paginaprincipal.html"
           ><button id="inicio">Inicio</button></a
         >
       </div>
