Agregue imagen de fondo principal

--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -11,22 +11,22 @@
         <h1 id="TituloDePagina">Sourstuck</h1> 
         <div class="desplegable">
             <div>
-                <a href="/Proyecto de santiago/Paginas del color de prendas/Quienesomos.html"><button id="quienesomos">¿Quienes Somos?</button></a>
+                <a href="/Paginas del color de prendas/Quienesomos.html"><button id="quienesomos">¿Quienes Somos?</button></a>
             </div>
         </div>
         
         <div class="desplegable">
             <button id="desplegablebtn">Variedad de colores</button>
             <div class="opciones" id="opciones">
-                <a href="/Proyecto de santiago/Paginas del color de prendas/Prendasnegras.html" class="colordesplegables">Negro</a>
-                <a href="/Proyecto de santiago/Paginas del color de prendas/Prendasblancas.html" class="colordesplegables" >Blanco</a>
-                <a href="/Proyecto de santiago/Paginas del color de prendas/Prendasamarillas.html" class="colordesplegables">Amarillo</a>
-                <a href="/Proyecto de santiago/Paginas del color de prendas/PrendasAzules.html" class="colordesplegables">Azul</a>
-                <a href="/Proyecto de santiago/Paginas del color de prendas/Prendasverdes.html" class="colordesplegables">Verde</a>
-                <a href="/Proyecto de santiago/Paginas del color de prendas/Prendasrosadas.html" class="colordesplegables">Rosado</a>
-                <a href="/Proyecto de santiago/Paginas del color de prendas/Prendasrojas.html" class="colordesplegables">Rojo</a>
-                <a href="/Proyecto de santiago/Paginas del color de prendas/Prendasgrises.html" class="colordesplegables">Gris</a>
-                <a href="/Proyecto de santiago/Paginas del color de prendas/Prendasmoradas.html" class="colordesplegables">Morado</a>
+                <a href="/Paginas del color de prendas/Prendasnegras.html" class="colordesplegables">Negro</a>
+                <a href="/Paginas del color de prendas/Prendasblancas.html" class="colordesplegables" >Blanco</a>
+                <a href="/Paginas del color de prendas/Prendasamarillas.html" class="colordesplegables">Amarillo</a>
+                <a href="/Paginas del color de prendas/PrendasAzules.html" class="colordesplegables">Azul</a>
+                <a href="/Paginas del color de prendas/Prendasverdes.html" class="colordesplegables">Verde</a>
+                <a href="/Paginas del color de prendas/Prendasrosadas.html" class="colordesplegables">Rosado</a>
+                <a href="/Paginas del color de prendas/Prendasrojas.html" class="colordesplegables">Rojo</a>
+                <a href="/Paginas del color de prendas/Prendasgrises.html" class="colordesplegables">Gris</a>
+                <a href="/Paginas del color de prendas/Prendasmoradas.html" class="colordesplegables">Morado</a>
             </div>
         </div>
         <div class="desplegable">
@@ -40,7 +40,7 @@
     </Header>
     <hr>
     <main>
-       <img id="Fondomain" src="/Proyecto de santiago/Imagenes/Fondo.jpg" alt="Fondo">
+       <img id="Fondomain" src="/Imagenes/Ponte a la moda.png" alt="Fondo">
     </main>
     
     <script src="/Paginas del color de prendas/script.js"></script>
