--- a/Paginas del color de prendas/PantalonesAnchos.html
+++ b/Paginas del color de prendas/PantalonesAnchos.html
@@ -35,11 +35,14 @@
         <button id="desplegablepantalon">Pantalones</button>
         <div class="opcionespantalon" id="opcionespantalon">
           <a href="" class="colordesplegables">Bermudas</a>
-          <a href="PantalonesAnchos.html" class="colordesplegables"
+          <a href="/Paginaprincipal.html" class="colordesplegables"
             >Pantalones anchos</a
           >
           <a href="" class="colordesplegables">Pantalones </a>
         </div>
+      </div>
+      <div class="desplegable">
+        <a href="Paginaprincipal.html"><button id="inicio">Inicio</button></a>
       </div>
     </header>
     <script src="script.js"></script>
