--- a/Paginas del color de prendas/Prendasgrises.html
+++ b/Paginas del color de prendas/Prendasgrises.html
@@ -78,8 +78,8 @@
       </div>
     </div>
       <div class="desplegable">
-      <a href="/Proyecto de santiago/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
-       </div>
+       <a href="/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
+      </div>
     </header>
     <main>
         <img src="Img Camisas grises/Camisa basica gris con logo.jpg" alt="Camisa basica gris con logo">
