--- a/Paginas del color de prendas/Prendasrojas.html
+++ b/Paginas del color de prendas/Prendasrojas.html
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="desplegable">
-     <a href="/Proyecto de santiago/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
+     <a href="/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
    </div>
     </header>
     <main>
