--- a/Paginas del color de prendas/Prendasamarillas.html
+++ b/Paginas del color de prendas/Prendasamarillas.html
@@ -41,6 +41,9 @@
           <a href="" class="colordesplegables">Pantalones </a>
         </div>
       </div>
+      <div class="desplegable">
+        <a href="/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
+      </div>
     </header>
     <main>
       <img src="Img Camisas Amarillas/Buzo amarillo.jpg" alt="Buso amarillo" />
