--- a/Paginas del color de prendas/Prendasblancas.html
+++ b/Paginas del color de prendas/Prendasblancas.html
@@ -39,6 +39,9 @@
           <a href="" class="colordesplegables">Pantalones </a>
         </div>
       </div>
+      <div class="desplegable">
+        <a href="/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
+      </div>
     </header>
     <main>
       <img src="Img Camisas Blancas/Camisa blanca.jpg" alt="Camisa blanca" />
