--- a/Paginas del color de prendas/Prendasmoradas.html
+++ b/Paginas del color de prendas/Prendasmoradas.html
@@ -79,7 +79,7 @@
       </div>
     </div>
     <div class="desplegable">
-     <a href="/Proyecto de santiago/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
+     <a href="/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
    </div>
     </header>
     <main>
