--- a/Paginas del color de prendas/Prendasnegras.html
+++ b/Paginas del color de prendas/Prendasnegras.html
@@ -80,7 +80,7 @@
       </div>
     </div>
     <div class="desplegable">
-     <a href="/Proyecto de santiago/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
+     <a href="/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
    </div>
     </Header>
     <main>
