--- a/Paginas del color de prendas/Quienesomos.html
+++ b/Paginas del color de prendas/Quienesomos.html
@@ -1,57 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sourstuck</title>
-    <link rel="stylesheet" href="Styles.css" />
-  </head>
-  <body>
-    <header>
-      <h1 id="TituloDePagina">Sourstuck</h1>
-      <div class="desplegable">
-        <div>
-          <a href="Quienesomos.html"
-            ><button id="quienesomos">Quienes somos</button></a
-          >
-        </div>
-      </div>
 
-      <div class="desplegable">
-        <button id="desplegablebtn">Variedad de colores</button>
-        <div class="opciones" id="opciones">
-          <a href="Prendasnegras.html" class="colordesplegables">Negro</a>
-          <a href="Prendasblancas.html" class="colordesplegables">Blanco</a>
-          <a href="Prendasamarillas.html" class="colordesplegables">Amarillo</a>
-          <a href="PrendasAzules.html" class="colordesplegables">Azul</a>
-          <a href="Prendasverdes.html" class="colordesplegables">Verde</a>
-          <a href="Prendasrosadas.html" class="colordesplegables">Rosado</a>
-          <a href="Prendasrojas.html" class="colordesplegables">Rojo</a>
-          <a href="Prendasgrises.html" class="colordesplegables">Gris</a>
-          <a href="Prendasmoradas.html" class="colordesplegables">Morado</a>
-        </div>
-      </div>
-      <div class="desplegable">
-        <button id="desplegablepantalon">Pantalones</button>
-        <div class="opcionespantalon" id="opcionespantalon">
-          <a href="" class="colordesplegables">Bermudas</a>
-          <a href="PantalonesAnchos.html" class="colordesplegables"
-            >Pantalones anchos</a
-          >
-          <a href="" class="colordesplegables">Pantalones </a>
-        </div>
-      </div>
-      <div class="desplegable">
-        <a href="/Paginaprincipal.html"
-          ><button id="inicio">Inicio</button></a
-        >
-      </div>
-      <hr />
-    </header>
-    <main>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sourstuck</title>
+  <link rel="stylesheet" href="Styles.css" />
+</head>
+
+<body>
+  <header>
+    <h1 id="TituloDePagina">Sourstuck</h1>
+    <div class="desplegable">
       <div>
-        <h1>¿Quienes Somos?</h1>
-        <p id="parrafo">
+        <a href="Quienesomos.html"><button id="quienesomos">Quienes somos</button></a>
+      </div>
+    </div>
+
+    <div class="desplegable">
+      <button id="desplegablebtn">Variedad de colores</button>
+      <div class="opciones" id="opciones">
+        <a href="Prendasnegras.html" class="colordesplegables">Negro</a>
+        <a href="Prendasblancas.html" class="colordesplegables">Blanco</a>
+        <a href="Prendasamarillas.html" class="colordesplegables">Amarillo</a>
+        <a href="PrendasAzules.html" class="colordesplegables">Azul</a>
+        <a href="Prendasverdes.html" class="colordesplegables">Verde</a>
+        <a href="Prendasrosadas.html" class="colordesplegables">Rosado</a>
+        <a href="Prendasrojas.html" class="colordesplegables">Rojo</a>
+        <a href="Prendasgrises.html" class="colordesplegables">Gris</a>
+        <a href="Prendasmoradas.html" class="colordesplegables">Morado</a>
+      </div>
+    </div>
+    <div class="desplegable">
+      <button id="desplegablepantalon">Pantalones</button>
+      <div class="opcionespantalon" id="opcionespantalon">
+        <a href="" class="colordesplegables">Bermudas</a>
+        <a href="PantalonesAnchos.html" class="colordesplegables">Pantalones anchos</a>
+        <a href="" class="colordesplegables">Pantalones </a>
+      </div>
+    </div>
+    <div class="desplegable">
+      <a href="/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
+    </div>
+    <hr />
+  </header>
+  <main>
+    <div id="parrafo">
+      <h1>¿Quienes Somos?</h1>
+        <p>
           Sourstuck es mucho más que una tienda de ropa de camisas y
           pantalones; somos una institución de moda apasionada y comprometida con
           nuestra comunidad. Con una larga historia de servicio, nuestro enfoque
@@ -63,7 +59,7 @@
           estilo único y auténtico. Nuestro compromiso es ofrecer una amplia
           colección de camisas y pantalones para hombres y mujeres de todas las
           edades, abarcando desde lo casual y lo elegante hasta lo moderno y lo
-          clásico. 
+          clásico.
           <br>
           Lo que nos distingue en Sourstuck es nuestra
           dedicación a la calidad. Cada prenda que ofrecemos es cuidadosamente
@@ -73,7 +69,7 @@
           harán lucir bien, sino que también se mantendrán en excelentes
           condiciones con el tiempo.
           <br>
-           Nuestro personal altamente capacitado y
+          Nuestro personal altamente capacitado y
           amable es uno de los pilares de nuestra tienda. Están listos para
           brindarte asesoramiento experto y personalizado en cada visita.
           Entendemos que la moda es más que solo ropa; es una declaración de
@@ -82,12 +78,12 @@
           completo para una ocasión especial, estamos aquí para ayudarte a tomar
           la decisión adecuada.
           <br>
-           En Sourstuck, valoramos la
+          En Sourstuck, valoramos la
           satisfacción del cliente por encima de todo. Nuestra misión es superar
           tus expectativas en cada visita. Desde el momento en que entras en
           nuestra tienda hasta que sales con tus compras, queremos que tengas una
           experiencia excepcional y te sientas como parte de nuestra comunidad de
-          moda. 
+          moda.
           <br>
           En resumen, Sourstuck es tu destino definitivo para
           la moda de camisas y pantalones. Somos una fuente confiable de estilo,
@@ -96,9 +92,10 @@
           moda con nosotros, porque en Sourstuck, la moda se
           encuentra con la excelencia en cada detalle."
         </p>
-      </div>
-     
-    </main>
-    <script src="script.js"></script>
-  </body>
+    </div>
+
+  </main>
+  <script src="script.js"></script>
+</body>
+
 </html>
