arreglo de imagenes principales

--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -1,52 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/Paginas del color de prendas/Styles.css">
-    <title>Sourstuck</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/Paginas del color de prendas/Styles.css">
+  <title>Sourstuck</title>
 </head>
+
 <body>
-    <Header  id="body">
-        <h1 id="TituloDePagina">Sourstuck</h1> 
-        <div class="desplegable">
-            <div>
-                <a href="/Paginas del color de prendas/Quienesomos.html"><button id="quienesomos">¿Quienes Somos?</button></a>
-            </div>
-        </div>
-        
-        <div class="desplegable">
-            <button id="desplegablebtn">Variedad de colores</button>
-            <div class="opciones" id="opciones">
-                <a href="/Paginas del color de prendas/Prendasnegras.html" class="colordesplegables">Negro</a>
-                <a href="/Paginas del color de prendas/Prendasblancas.html" class="colordesplegables" >Blanco</a>
-                <a href="/Paginas del color de prendas/Prendasamarillas.html" class="colordesplegables">Amarillo</a>
-                <a href="/Paginas del color de prendas/PrendasAzules.html" class="colordesplegables">Azul</a>
-                <a href="/Paginas del color de prendas/Prendasverdes.html" class="colordesplegables">Verde</a>
-                <a href="/Paginas del color de prendas/Prendasrosadas.html" class="colordesplegables">Rosado</a>
-                <a href="/Paginas del color de prendas/Prendasrojas.html" class="colordesplegables">Rojo</a>
-                <a href="/Paginas del color de prendas/Prendasgrises.html" class="colordesplegables">Gris</a>
-                <a href="/Paginas del color de prendas/Prendasmoradas.html" class="colordesplegables">Morado</a>
-            </div>
-        </div>
-        <div class="desplegable">
-            <button id="desplegablepantalon">Pantalones</button>
-            <div  class="opcionespantalon" id="opcionespantalon">
-                <a href="" class="colordesplegables">Bermudas</a>
-                <a href="PantalonesAnchos.html" class="colordesplegables">Pantalones anchos</a>
-                <a href="" class="colordesplegables">Pantalones </a>
-            </div>
-        </div>
-    </Header>
-    <hr>
-    <main>
-      <!--<img id="Fondomain" src="/Imagenes/Ponte a la moda.png" alt="Fondo">-->
-      <div><h1>Ponte a la moda con Sourstuck</h1></div>
+  <Header id="body">
+    <h1 id="TituloDePagina">Sourstuck</h1>
+    <div class="desplegable">
+      <div>
+        <a href="/Paginas del color de prendas/Quienesomos.html"><button id="quienesomos">¿Quienes Somos?</button></a>
+      </div>
+    </div>
+
+    <div class="desplegable">
+      <button id="desplegablebtn">Variedad de colores</button>
+      <div class="opciones" id="opciones">
+        <a href="/Paginas del color de prendas/Prendasnegras.html" class="colordesplegables">Negro</a>
+        <a href="/Paginas del color de prendas/Prendasblancas.html" class="colordesplegables">Blanco</a>
+        <a href="/Paginas del color de prendas/Prendasamarillas.html" class="colordesplegables">Amarillo</a>
+        <a href="/Paginas del color de prendas/PrendasAzules.html" class="colordesplegables">Azul</a>
+        <a href="/Paginas del color de prendas/Prendasverdes.html" class="colordesplegables">Verde</a>
+        <a href="/Paginas del color de prendas/Prendasrosadas.html" class="colordesplegables">Rosado</a>
+        <a href="/Paginas del color de prendas/Prendasrojas.html" class="colordesplegables">Rojo</a>
+        <a href="/Paginas del color de prendas/Prendasgrises.html" class="colordesplegables">Gris</a>
+        <a href="/Paginas del color de prendas/Prendasmoradas.html" class="colordesplegables">Morado</a>
+      </div>
+    </div>
+    <div class="desplegable">
+      <button id="desplegablepantalon">Pantalones</button>
+      <div class="opcionespantalon" id="opcionespantalon">
+        <a href="" class="colordesplegables">Bermudas</a>
+        <a href="PantalonesAnchos.html" class="colordesplegables">Pantalones anchos</a>
+        <a href="" class="colordesplegables">Pantalones </a>
+      </div>
+    </div>
+  </Header>
+  <hr>
+  <main>
+    <!--<img id="Fondomain" src="/Imagenes/Ponte a la moda.png" alt="Fondo">-->
+    <div>
+      <h1>Ponte a la moda con Sourstuck</h1>
+    </div>
+    <div class="titulosprinciapales">
       <div>
         <h2>Conjunto 1</h2>
         <img src="/Imagenes principales/Beisbolera negra.jpg" alt="Camisa 1">
       </div>
-      <div>
+      <div class="titulosprincipales">
         <h2>conjunto 2</h2>
         <img src="/Imagenes principales/Camisa balnca con buso negro.jpg" alt="camisa 2">
       </div>
@@ -76,11 +81,13 @@
       </div>
       <div>
         <h2>Conjunto 9</h2>
-        <img  style="width: 236px; height: 314px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
+        <img style="width: 236px; height: 314px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
       </div>
-    </main>
-    
-    <script src="/Paginas del color de prendas/script.js"></script>
+
+    </div>
+  </main>
+
+  <script src="/Paginas del color de prendas/script.js"></script>
 </body>
 
 </html>
