--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -46,7 +46,7 @@
     <div>
       <h1>Ponte a la moda con Sourstuck</h1>
     </div>
-    <div class="titulosprinciapales">
+    <div class="titulosprincipales">
       <div>
         <h2>Conjunto 1</h2>
         <img src="/Imagenes principales/Beisbolera negra.jpg" alt="Camisa 1">
