--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -59,6 +59,8 @@
         <h2>Conjunto 3</h2>
         <img src="/Imagenes principales/Camisa blanca con mangas negras.jpg" alt="camisa 3">
       </div>
+    </div>
+    <div>
       <div>
         <h2>Conjunto 4</h2>
         <img src="/Imagenes principales/Camisa blancas.jpg" alt="Camisa 4">
@@ -71,6 +73,8 @@
         <h2>Conjunto 6</h2>
         <img src="/Imagenes principales/camisa negra.jpg" alt="Camisa 6">
       </div>
+    </div>
+    <div>
       <div>
         <h2>Conjunto 7</h2>
         <img src="/Imagenes principales/Camisa tipo beisbolera.jpg" alt="Camisa 7">
@@ -83,7 +87,6 @@
         <h2>Conjunto 9</h2>
         <img style="width: 236px; height: 314px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
       </div>
-
     </div>
   </main>
 
