--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -43,51 +43,53 @@
   <hr>
   <main>
     <!--<img id="Fondomain" src="/Imagenes/Ponte a la moda.png" alt="Fondo">-->
-    <div>
-      <h1>Ponte a la moda con Sourstuck</h1>
-    </div>
-    <div class="titulosprincipales">
+    <section>
       <div>
-        <h2>Conjunto 1</h2>
-        <img src="/Imagenes principales/Beisbolera negra.jpg" alt="Camisa 1">
+        <h1>Ponte a la moda con Sourstuck</h1>
       </div>
       <div class="titulosprincipales">
-        <h2>conjunto 2</h2>
-        <img src="/Imagenes principales/Camisa balnca con buso negro.jpg" alt="camisa 2">
+        <div>
+          <h2>Conjunto 1</h2>
+          <img src="/Imagenes principales/Beisbolera negra.jpg" alt="Camisa 1">
+        </div>
+        <div class="titulosprincipales">
+          <h2>conjunto 2</h2>
+          <img src="/Imagenes principales/Camisa balnca con buso negro.jpg" alt="camisa 2">
+        </div>
+        <div>
+          <h2>Conjunto 3</h2>
+          <img src="/Imagenes principales/Camisa blanca con mangas negras.jpg" alt="camisa 3">
+        </div>
       </div>
       <div>
-        <h2>Conjunto 3</h2>
-        <img src="/Imagenes principales/Camisa blanca con mangas negras.jpg" alt="camisa 3">
-      </div>
-    </div>
-    <div>
-      <div>
-        <h2>Conjunto 4</h2>
-        <img src="/Imagenes principales/Camisa blancas.jpg" alt="Camisa 4">
-      </div>
-      <div>
-        <h2>Conjunto 5</h2>
-        <img src="/Imagenes principales/Camisa Color beish.jpg" alt="Camisa 5">
-      </div>
-      <div>
-        <h2>Conjunto 6</h2>
-        <img src="/Imagenes principales/camisa negra.jpg" alt="Camisa 6">
-      </div>
-    </div>
-    <div>
-      <div>
-        <h2>Conjunto 7</h2>
-        <img src="/Imagenes principales/Camisa tipo beisbolera.jpg" alt="Camisa 7">
+        <div>
+          <h2>Conjunto 4</h2>
+          <img src="/Imagenes principales/Camisa blancas.jpg" alt="Camisa 4">
+        </div>
+        <div>
+          <h2>Conjunto 5</h2>
+          <img src="/Imagenes principales/Camisa Color beish.jpg" alt="Camisa 5">
+        </div>
+        <div>
+          <h2>Conjunto 6</h2>
+          <img src="/Imagenes principales/camisa negra.jpg" alt="Camisa 6">
+        </div>
       </div>
       <div>
-        <h2>Conjunto 8</h2>
-        <img src="/Imagenes principales/Camisas basicas.jpg" alt="Camisa 8">
+        <div>
+          <h2>Conjunto 7</h2>
+          <img src="/Imagenes principales/Camisa tipo beisbolera.jpg" alt="Camisa 7">
+        </div>
+        <div>
+          <h2>Conjunto 8</h2>
+          <img src="/Imagenes principales/Camisas basicas.jpg" alt="Camisa 8">
+        </div>
+        <div>
+          <h2>Conjunto 9</h2>
+          <img style="width: 236px; height: 314px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
+        </div>
       </div>
-      <div>
-        <h2>Conjunto 9</h2>
-        <img style="width: 236px; height: 314px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
-      </div>
-    </div>
+    </section>
   </main>
 
   <script src="/Paginas del color de prendas/script.js"></script>
