--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -43,11 +43,11 @@
   <hr>
   <main>
     <!--<img id="Fondomain" src="/Imagenes/Ponte a la moda.png" alt="Fondo">-->
+    <div>
+      <h1>Ponte a la moda con Sourstuck</h1>
+    </div>
     <section>
-      <div>
-        <h1>Ponte a la moda con Sourstuck</h1>
-      </div>
-      <div>
+      <div class="cajas">
         <div class="titulosprincipales">
           <h2>Conjunto 1</h2>
           <img src="/Imagenes principales/Beisbolera negra.jpg" alt="Camisa 1">
@@ -61,7 +61,7 @@
           <img src="/Imagenes principales/Camisa blanca con mangas negras.jpg" alt="camisa 3">
         </div>
       </div>
-      <div>
+      <div class="cajas">
         <div class="titulosprincipales">
           <h2>Conjunto 4</h2>
           <img src="/Imagenes principales/Camisa blancas.jpg" alt="Camisa 4">
@@ -75,7 +75,7 @@
           <img src="/Imagenes principales/camisa negra.jpg" alt="Camisa 6">
         </div>
       </div>
-      <div>
+      <div class="cajas">
         <div class="titulosprincipales">
           <h2>Conjunto 7</h2>
           <img src="/Imagenes principales/Camisa tipo beisbolera.jpg" alt="Camisa 7">
