--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -95,7 +95,7 @@
         <br>
         <div class="titulosprincipales">
           <h2>Conjunto 9</h2>
-          <img style="width: 236px; height: 314px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
+          <img  src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
       </div>
     </section>
