--- a/prueba/index.html
+++ b/prueba/index.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/prueba/estilos.css">
-    <title>Document</title>
+    <style>
+        .caja {
+            width: 200px;
+            height: 200px;
+            background-color: #3498db;
+            border-radius: 15px; /* Ajusta el valor según tus preferencias */
+        }
+    </style>
+    <title>Esquinas Curvas</title>
 </head>
 <body>
-  <div class="conjuntos">
-    <h1>Conjunto</h1>
-<img src="/Imagenes/Logo.jpeg" alt="Fondo">
-</div> 
-<div>   
-    <h1>Conjunto</h1>
-    <img src="/Imagenes/Logo.jpeg" alt="Fondo">
-</div>
-
-<div class="cuadro">
-    <h1>conjuntos</h1>
-    <!-- Imagen dentro del cuadro -->
-    <img src="/Imagenes/Logo.jpeg" alt="Descripción de la imagen">
-</div>
-  
+    <div class="caja"></div>
 </body>
-</html> 
-
-
+</html>
 
 
