Ubicaciones de pagian principal

--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -94,8 +94,8 @@
         </div>
         <br>
         <div class="titulosprincipales">
-          <h2 style="top: 40px;">Conjunto 9</h2>
-          <img src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
+          <h2 style=" position: absolute; top: 10px; left: 10px;">Conjunto 9</h2>
+          <img style=" position: relative;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
       </div>
     </section>
