--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -95,7 +95,7 @@
         <br>
         <div class="titulosprincipales">
           <h2 style=" position: absolute; top: 10px; left: 10px;">Conjunto 9</h2>
-          <img style=" position: relative;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
+          <img style=" position: relative; top: -40px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
       </div>
     </section>
