--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -94,7 +94,7 @@
         </div>
         <br>
         <div class="titulosprincipales">
-          <h2 style=" position: absolute; top: 10px; left: 10px;">Conjunto 9</h2>
+          <h2 style=" position: relative; top: 10px; left: 10px;">Conjunto 9</h2>
           <img style=" position: relative; top: 50px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
       </div>
