--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -93,7 +93,7 @@
           <img src="/Imagenes principales/Camisas basicas.jpg" alt="Camisa 8">
         </div>
         <br>
-        <div class="titulosprincipales">
+        <div style="bottom: 500vh;" class="titulosprincipales">
           <h2 style=" position: relative; top: 10px; left: 10px;">Conjunto 9</h2>
           <img style=" position: relative; top: 50px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
