--- a/prueba/index.html
+++ b/prueba/index.html
@@ -14,7 +14,8 @@
     <title>Esquinas Curvas</title>
 </head>
 <body>
-    <div class="caja"></div>
+    <div class="mi-cuadro">Contenido del cuadro</div>
+
 </body>
 </html>
 
