--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -94,8 +94,8 @@
         </div>
         <br>
         <div style="bottom: 1000px;" class="titulosprincipales">
-          <h2 style="top: -20px;">Conjunto 9</h2>
-          <img style=" top: 20px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
+          <h2>Conjunto 9</h2>
+          <img src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
       </div>
     </section>
