--- a/prueba/index.html
+++ b/prueba/index.html
@@ -16,6 +16,15 @@
 <body>
     <div class="mi-cuadro">Contenido del cuadro</div>
 
+
+    <div class="contenedor">
+        <h1>Mi Título</h1>
+        <img src="/Imagenes principales/Beisbolera negra.jpg" alt="beisbol">
+    </div>
+
+
+    
+
 </body>
 </html>
 
