--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -95,7 +95,7 @@
         <br>
         <div style="bottom: 1000px;" class="titulosprincipales">
           <h2>Conjunto 9</h2>
-          <img src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
+          <img style="margin-top: 60px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
       </div>
     </section>
