--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -52,7 +52,7 @@
     <section>
       <div class="cajas">
         <div class="titulosprincipales">
-          <h2>Conjunto 1</h2>
+          <h2 class="titulosH2">Conjunto 1</h2>
           <img src="/Imagenes principales/Beisbolera negra.jpg" alt="Camisa 1">
         </div>
         <div class="titulosprincipales">
