--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -93,7 +93,7 @@
           <img src="/Imagenes principales/Camisas basicas.jpg" alt="Camisa 8">
         </div>
         <br>
-        <div style="bottom: 1000px;" class="titulosprincipales">
+        <div style="margin-left: 40px;" class="titulosprincipales">
           <h2>Conjunto 9</h2>
           <img  src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
