--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -94,8 +94,8 @@
         </div>
         <br>
         <div class="titulosprincipales">
-          <h2 style="margin-bottom: 110000px;">Conjunto 9</h2>
-          <img style="margin-right: 150px;"  src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
+          <h2 >Conjunto 9</h2>
+          <img   src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
       </div>
     </section>
