--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -94,7 +94,7 @@
         </div>
         <br>
         <div class="titulosprincipales">
-          <h2 >Conjunto 9</h2>
+          <h2 style="margin-top: 10px;" >Conjunto 9</h2>
           <img   src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
       </div>
