--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -51,22 +51,34 @@
     <hr>
     <section>
       <div class="cajas">
-        <div>
+        <div class="subcajas">
           <div class="titulosprincipales">
             <h2 class="titulosH2">Conjunto 1</h2>
             <img src="/Imagenes principales/Beisbolera negra.jpg" alt="Camisa 1">
           </div>
         </div>
-        <div class="titulosprincipales">
-          <h2 class="titulosH2">conjunto 2</h2>
-          <img src="/Imagenes principales/Camisa balnca con buso negro.jpg" alt="camisa 2">
+        <div>
+         <div class="titulosprincipales">
+           <h2 class="titulosH2">conjunto 2</h2>
+           <img src="/Imagenes principales/Camisa balnca con buso negro.jpg" alt="camisa 2">
+         </div>
         </div>
-        <div class="titulosprincipales">
-          <h2 class="titulosH2">Conjunto 3</h2>
-          <img src="/Imagenes principales/Camisa blanca con mangas negras.jpg" alt="camisa 3">
+        <div>
+         <div class="titulosprincipales">
+           <h2 class="titulosH2">Conjunto 3</h2>
+           <img src="/Imagenes principales/Camisa blanca con mangas negras.jpg" alt="camisa 3">
+         </div>
+       </div>
+       <div class="caja">
+        <div>
+          <h2>Pruiebas</h2>
+          <img src="/Imagenes principales/Beisbolera negra.jpg" alt="beisbolera">
         </div>
+       </div>
       </div>
       <br>
+
+
       <div class="cajas">
         <div class="titulosprincipales">
           <h2 class="titulosH2">Conjunto 4</h2>
