--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/Paginas del color de prendas/Styles.css">
+  <link rel="stylesheet" href="/Paginaprincipal.css">
   <title>Sourstuck</title>
 </head>
 
@@ -50,67 +51,12 @@
     </div>
     <hr>
     <section>
-      <div class="cajas">
-        <div class="subcajas">
-          <div class="titulosprincipales">
-            <h2 class="titulosH2">Conjunto 1</h2>
-            <img src="/Imagenes principales/Beisbolera negra.jpg" alt="Camisa 1">
+      <div>
+        <div class="caja">
+          <div>
+            <h2>PRENDA 1</h2>
+            <img src="/Imagenes principales/Beisbolera negra.jpg" alt="beisbolera negra">
           </div>
-        </div>
-        <div>
-         <div class="titulosprincipales">
-           <h2 class="titulosH2">conjunto 2</h2>
-           <img src="/Imagenes principales/Camisa balnca con buso negro.jpg" alt="camisa 2">
-         </div>
-        </div>
-        <div>
-         <div class="titulosprincipales">
-           <h2 class="titulosH2">Conjunto 3</h2>
-           <img src="/Imagenes principales/Camisa blanca con mangas negras.jpg" alt="camisa 3">
-         </div>
-       </div>
-       <div class="caja">
-        <div>
-          <h2>Pruiebas</h2>
-          <img src="/Imagenes principales/Beisbolera negra.jpg" alt="beisbolera">
-        </div>
-       </div>
-      </div>
-      <br>
-
-
-      <div class="cajas">
-        <div class="titulosprincipales">
-          <h2 class="titulosH2">Conjunto 4</h2>
-          <img src="/Imagenes principales/Camisa blancas.jpg" alt="Camisa 4">
-        </div>
-        <br>
-        <div class="titulosprincipales">
-          <h2 class="titulosH2">Conjunto 5</h2>
-          <img src="/Imagenes principales/Camisa Color beish.jpg" alt="Camisa 5">
-        </div>
-        <br>
-        <div class="titulosprincipales">
-          <h2 class="titulosH2">Conjunto 6</h2>
-          <img src="/Imagenes principales/camisa negra.jpg" alt="Camisa 6">
-        </div>
-      </div>
-      <br>
-      <div class="cajas">
-        <div class="titulosprincipales">
-          <h2 class="titulosH2">Conjunto 7</h2>
-          <img src="/Imagenes principales/Camisa tipo beisbolera.jpg" alt="Camisa 7">
-        </div>
-        <br>
-        <div class="titulosprincipales">
-          <h2 class="titulosH2">Conjunto 8</h2>
-          <img src="/Imagenes principales/Camisas basicas.jpg" alt="Camisa 8">
-        </div>
-        <br>
-        <div class="titulosprincipales">
-          <h2 class="titulosH2">Conjunto</h2>
-          <br>
-          <img src="/Imagenes principales/Dragon.jpg" alt="Camisa 9">
         </div>
       </div>
     </section>
