Cmabio de ubicacion

--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -53,7 +53,7 @@
     <section>
       <div>
         <div class="caja">
-          <div>
+          <div class="contenido">
             <h2>PRENDA 1</h2>
             <img src="/Imagenes principales/Beisbolera negra.jpg" alt="beisbolera negra">
           </div>
