--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -61,6 +61,9 @@
       </div>
     </section>
   </main>
+  <footer>
+    
+  </footer>
 
   <script src="/Paginas del color de prendas/script.js"></script>
 </body>
