--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -58,6 +58,18 @@
             <img src="/Imagenes principales/Beisbolera negra.jpg" alt="beisbolera negra">
           </div>
         </div>
+        <div class="caja">
+          <div class="contenido">
+            <h2>PRENDA 2</h2>
+            <img src="/Imagenes principales/Camisa balnca con buso negro.jpg" alt="Camisa con buso negro">
+          </div>
+        </div>
+        <div class="caja">
+          <div class="contenido">
+            <h2>PRENDA 3</h2>
+            <img src="/Imagenes principales/Camisa blanca con mangas negras.jpg" alt="Camisa manga negra">
+          </div>
+        </div>
       </div>
     </section>
   </main>
