--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -51,7 +51,7 @@
     </div>
     <hr>
     <section>
-      <div>
+      <div id="cajainicial">
         <div class="caja">
           <div class="contenido">
             <h2>PRENDA 1</h2>
@@ -68,6 +68,43 @@
           <div class="contenido">
             <h2>PRENDA 3</h2>
             <img src="/Imagenes principales/Camisa blanca con mangas negras.jpg" alt="Camisa manga negra">
+          </div>
+        </div>
+        <div>
+          <div>
+            <h2>PRENDA 4</h2>
+            <img src="/Imagenes principales/Camisa blancas.jpg" alt="Camisa blanca">
+          </div>
+        </div>
+        <div>
+          <div>
+            <h2>PRENDA 5</h2>
+            <img src="/Imagenes principales/Camisa Color beish.jpg" alt="Camisa beish">
+          </div>
+        </div>
+        <div>
+          <div>
+            <h2>PRENDA 6</h2>
+            <img src="/Imagenes principales/camisa negra.jpg" alt="Camisa negra">
+          </div>
+        </div>
+        <div>
+          <div>
+            <h2>PRENDA 7</h2>
+            <img src="/Imagenes principales/Camisa tipo beisbolera.jpg" alt="Besibolerasemi">
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <h2>PRENDA 8</h2>
+              <img src="/Imagenes principales/Camisas basicas.jpg" alt="Camisas basicas">
+          </div>
+        </div>
+        <div>
+          <div>
+            <h2>PRENDA 9</h2>
+            <img src="/Imagenes principales/Dragon.jpg" alt="Camisa Dragon">
           </div>
         </div>
       </div>
