--- a/Paginaprincipal.html
+++ b/Paginaprincipal.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/Paginas del color de prendas/Styles.css">
   <link rel="stylesheet" href="/Paginaprincipal.css">
+  <script src="https://kit.fontawesome.com/0fd9bea2db.js" crossorigin="anonymous"></script>
   <title>Sourstuck</title>
 </head>
 
@@ -103,14 +104,20 @@
         <div class="caja">
           <div class="contenido">
             <h2>PRENDA 9</h2>
-            <img src="/Imagenes principales/Dragon.jpg" alt="Camisa Dragon">
+            <img style="width: 236px; height: 314px;" src="/Imagenes principales/Dragon.jpg" alt="Camisa Dragon">
           </div>
         </div>
       </div>
     </section>
   </main>
   <footer>
-    
+    <h1>Nuestas Redes sociales</h1>
+    <ul>
+      <li><a href="https://www.facebook.com/santiago.jimenezvergara.10?locale=es_LA"><i class="fa-brands fa-facebook"></i><span>- Facebook</span></a></li>
+      <li><a href="wa.me/message/FD5GY4TTITDPE1"><i class="fa-brands fa-whatsapp"></i><span> - Whatsapp</span></a></li>
+      <li><a href="https://www.tiktok.com/es/"><i class="fa-brands fa-tiktok"></i><span> - Tik Tok</span></a></li>
+      <li><a href="https://www.instagram.com/sourstuck/"><i class="fa-brands fa-instagram"></i><span> - Instagram</span></a></li>
+    </ul>
   </footer>
 
   <script src="/Paginas del color de prendas/script.js"></script>
