Agregue css a partes de la pagina

--- a/Paginas del color de prendas/Prendasmoradas.html
+++ b/Paginas del color de prendas/Prendasmoradas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=º, initial-scale=1.0">
     <title>Prendas moradas</title>
     <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="/Paginas del color de prendas/Css/Prendasmoradas.css">
 </head>
 <body>
     <header>
