--- a/Paginas del color de prendas/Prendasgrises.html
+++ b/Paginas del color de prendas/Prendasgrises.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prendas Grises</title>
     <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="/Paginas del color de prendas/Css/Prendasgrises.css">
 </head>
 <body>
     <header> <h1 id="TituloDePagina">Sourstuck</h1> 
