--- a/Paginas del color de prendas/Prendasrojas.html
+++ b/Paginas del color de prendas/Prendasrojas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prendas Rojas</title>
     <link rel="stylesheet" href="Styles.css" />
+    <link rel="stylesheet" href="/Paginas del color de prendas/Css/Prendarojas.css">
   </head>
   <body>
     <header>
