Agregue footer a todas las paginas

--- a/Paginas del color de prendas/Prendasblancas.html
+++ b/Paginas del color de prendas/Prendasblancas.html
@@ -1,62 +1,66 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prendas Blancas</title>
-    <link rel="stylesheet" href="Styles.css" />
-    <link rel="stylesheet" href="/Paginas del color de prendas/Css/Prendasblancas.css">
-  </head>
-  <body>
-    <header>
-      <h1 id="TituloDePagina">Sourstuck</h1>
-      <div class="desplegable">
-        <div>
-          <a href="Quienesomos.html"
-            ><button id="quienesomos">Quienes somos</button></a>
-        </div>
-      </div>
 
-      <div class="desplegable">
-        <button id="desplegablebtn">Variedad de colores</button>
-        <div class="opciones" id="opciones">
-          <a href="Prendasnegras.html" class="colordesplegables">Negro</a>
-          <a href="Prendasblancas.html" class="colordesplegables">Blanco</a>
-          <a href="Prendasamarillas.html" class="colordesplegables">Amarillo</a>
-          <a href="PrendasAzules.html" class="colordesplegables">Azul</a>
-          <a href="Prendasverdes.html" class="colordesplegables">Verde</a>
-          <a href="Prendasrosadas.html" class="colordesplegables">Rosado</a>
-          <a href="Prendasrojas.html" class="colordesplegables">Rojo</a>
-          <a href="Prendasgrises.html" class="colordesplegables">Gris</a>
-          <a href="Prendasmoradas.html" class="colordesplegables">Morado</a>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Prendas Blancas</title>
+  <link rel="stylesheet" href="Styles.css" />
+  <link rel="stylesheet" href="/Paginas del color de prendas/Css/Prendasblancas.css">
+</head>
+
+<body>
+  <header>
+    <h1 id="TituloDePagina">Sourstuck</h1>
+    <div class="desplegable">
+      <div>
+        <a href="Quienesomos.html"><button id="quienesomos">Quienes somos</button></a>
       </div>
-      <div class="desplegable">
-        <button id="desplegablepantalon">Pantalones</button>
-        <div class="opcionespantalon" id="opcionespantalon">
-          <a href="" class="colordesplegables">Bermudas</a>
-          <a href="PantalonesAnchos.html" class="colordesplegables"
-            >Pantalones anchos</a >
-          <a href="" class="colordesplegables">Pantalones </a>
-        </div>
+    </div>
+
+    <div class="desplegable">
+      <button id="desplegablebtn">Variedad de colores</button>
+      <div class="opciones" id="opciones">
+        <a href="Prendasnegras.html" class="colordesplegables">Negro</a>
+        <a href="Prendasblancas.html" class="colordesplegables">Blanco</a>
+        <a href="Prendasamarillas.html" class="colordesplegables">Amarillo</a>
+        <a href="PrendasAzules.html" class="colordesplegables">Azul</a>
+        <a href="Prendasverdes.html" class="colordesplegables">Verde</a>
+        <a href="Prendasrosadas.html" class="colordesplegables">Rosado</a>
+        <a href="Prendasrojas.html" class="colordesplegables">Rojo</a>
+        <a href="Prendasgrises.html" class="colordesplegables">Gris</a>
+        <a href="Prendasmoradas.html" class="colordesplegables">Morado</a>
       </div>
-      <div class="desplegable">
-        <a href="/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
+    </div>
+    <div class="desplegable">
+      <button id="desplegablepantalon">Pantalones</button>
+      <div class="opcionespantalon" id="opcionespantalon">
+        <a href="" class="colordesplegables">Bermudas</a>
+        <a href="PantalonesAnchos.html" class="colordesplegables">Pantalones anchos</a>
+        <a href="" class="colordesplegables">Pantalones </a>
       </div>
-    </header>
-    <main>
-      <img src="Img Camisas Blancas/Camisa blanca.jpg" alt="Camisa blanca" />
-      <img
-        src="Img Camisas Blancas/Camiseta de botones blanca.jpg"
-        alt="Camisa de botones blanca"
-      />
-      <img
-        src="Img Camisas Blancas/images.jfif"
-        alt="Camisa blanca"
-        width="236px"
-        height="314px"
-      />
-    </main>
-    <script src="script.js"></script>
-  </body>
+    </div>
+    <div class="desplegable">
+      <a href="/Paginaprincipal.html"><button id="inicio">Inicio</button></a>
+    </div>
+  </header>
+  <main>
+    <img src="Img Camisas Blancas/Camisa blanca.jpg" alt="Camisa blanca" />
+    <img src="Img Camisas Blancas/Camiseta de botones blanca.jpg" alt="Camisa de botones blanca" />
+    <img src="Img Camisas Blancas/images.jfif" alt="Camisa blanca" width="236px" height="314px" />
+  </main>
+  <footer>
+    <h1>Nuestas Redes sociales</h1>
+    <ul>
+      <li><a href="https://www.facebook.com/santiago.jimenezvergara.10?locale=es_LA"><i
+            class="fa-brands fa-facebook"></i><span>- Facebook</span></a></li>
+      <li><a href="wa.me/message/FD5GY4TTITDPE1"><i class="fa-brands fa-whatsapp"></i><span> - Whatsapp</span></a></li>
+      <li><a href="https://www.tiktok.com/es/"><i class="fa-brands fa-tiktok"></i><span> - Tik Tok</span></a></li>
+      <li><a href="https://www.instagram.com/sourstuck/"><i class="fa-brands fa-instagram"></i><span> -
+            Instagram</span></a></li>
+    </ul>
+  </footer>
+  <script src="script.js"></script>
+</body>
+
 </html>
