--- a/Paginas del color de prendas/Prendasmoradas.html
+++ b/Paginas del color de prendas/Prendasmoradas.html
@@ -88,6 +88,15 @@
         <img src="img camisas moradas/Camisa basica morada.jpg" alt="Camisa basica morada">
         <img src="img camisas moradas/Camiseta de botones morada.jpg" alt="Camiseta de botomes morada">
     </main>
+    <footer>
+      <h1>Nuestas Redes sociales</h1>
+      <ul>
+        <li><a href="https://www.facebook.com/santiago.jimenezvergara.10?locale=es_LA"><i class="fa-brands fa-facebook"></i><span>- Facebook</span></a></li>
+        <li><a href="wa.me/message/FD5GY4TTITDPE1"><i class="fa-brands fa-whatsapp"></i><span> - Whatsapp</span></a></li>
+        <li><a href="https://www.tiktok.com/es/"><i class="fa-brands fa-tiktok"></i><span> - Tik Tok</span></a></li>
+        <li><a href="https://www.instagram.com/sourstuck/"><i class="fa-brands fa-instagram"></i><span> - Instagram</span></a></li>
+      </ul>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
